--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.leimingtech</groupId>
+  <groupId>com.lin</groupId>
   <artifactId>cms</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
 
-  <name>leimingtech</name>
+  <name>lin</name>
   <url>http://maven.apache.org</url>
 
   <properties>
